force-app/main/default/objects/Payment_Schedule__c/Payment_Schedule__c.object-meta.xml
<CustomObject>
    <description>To be Deprecated: This object is used to store both master and sub payment schedules for a patient.</description>
    <label>Master Payment Schedule</label>
    <nameField>
        <displayFormat>PS-{0000}</displayFormat>
        <label>Payment Schedule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Master Payment Schedule</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>