force-app/main/default/objects/Payment_Schedule__c/fields/Balance_Due1__c.field-meta.xml
<CustomField>
    <fullName>Balance_Due1__c</fullName>
    <formula>Installment_Amount__c - Total_payment_Made_formula__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Balance Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>