force-app/main/default/objects/Payment_Schedule__c/fields/Last_Payment_Made__c.field-meta.xml
<CustomField>
    <fullName>Last_Payment_Made__c</fullName>
    <label>Last Payment Date</label>
    <type>Date</type>
</CustomField>