force-app/main/default/objects/Payment_Schedule__c/fields/Net_Balance__c.field-meta.xml
<CustomField>
    <fullName>Net_Balance__c</fullName>
    <label>Patient Responsibility/Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>