force-app/main/default/objects/Payment_Schedule__c/fields/Patient_Bill__c.field-meta.xml
<CustomField>
    <fullName>Patient_Bill__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Patient Bill</label>
    <referenceTo>Patient_Statement__c</referenceTo>
    <relationshipName>Payment_Plan</relationshipName>
    <type>Lookup</type>
</CustomField>