force-app/main/default/objects/Payment_Schedule__c/fields/Pay_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Pay_Frequency__c</fullName>
    <label>Pay Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>