force-app/main/default/objects/Payment_Schedule__c/fields/Payment_Extension__c.field-meta.xml
<CustomField>
    <fullName>Payment_Extension__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payment Extension</label>
    <type>Checkbox</type>
</CustomField>