force-app/main/default/objects/Payment_Schedule__c/fields/Payment_Interval__c.field-meta.xml
<CustomField>
    <fullName>Payment_Interval__c</fullName>
    <formula>(Due_Date__c -  TODAY())</formula>
    <label>Payment Interval</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>