force-app/main/default/objects/Payment_Schedule__c/fields/Payment_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Payment_Schedule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Master Payment Schedule</label>
    <referenceTo>Payment_Schedule__c</referenceTo>
    <relationshipLabel>Sub Payment Schedule</relationshipLabel>
    <relationshipName>Payment_Schedule</relationshipName>
    <type>Lookup</type>
</CustomField>