force-app/main/default/objects/Payment_Schedule__c/fields/Plan_description__c.field-meta.xml
<CustomField>
    <fullName>Plan_description__c</fullName>
    <label>Plan description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>