force-app/main/default/objects/Payment_Schedule__c/fields/Send_Payment_Missed_Email__c.field-meta.xml
<CustomField>
    <fullName>Send_Payment_Missed_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Payment Missed Email</label>
    <type>Checkbox</type>
</CustomField>