force-app/main/default/objects/Payment_Schedule__c/fields/Total_Balance_Due__c.field-meta.xml
<CustomField>
    <fullName>Total_Balance_Due__c</fullName>
    <formula>Net_Balance__c -  Total_Amount_Paid__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Balance Due</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>