force-app/main/default/objects/Payment_Schedule__c/fields/Total_Payment_Made1__c.field-meta.xml
<CustomField>
    <fullName>Total_Payment_Made1__c</fullName>
    <label>Total Payment Made</label>
    <summarizedField>Payment_Line__c.Payment_Amount__c</summarizedField>
    <summaryForeignKey>Payment_Line__c.Payment_Schedule__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>