force-app/main/default/objects/Payment_Schedule__c/fields/Total_Payment_Made__c.field-meta.xml
<CustomField>
    <fullName>Total_Payment_Made__c</fullName>
    <label>Total Payment Made</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>