force-app/main/default/objects/Payment_Schedule__c/fields/Total_payment_Made_formula__c.field-meta.xml
<CustomField>
    <fullName>Total_payment_Made_formula__c</fullName>
    <formula>Total_Payment_Made1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total payment Made</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>