force-app/main/default/objects/Payment_Schedule__c/fields/updatedNetBalance__c.field-meta.xml
<CustomField>
    <fullName>updatedNetBalance__c</fullName>
    <label>updatedNetBalance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>