force-app/main/default/objects/Payment_Schedule__c/recordTypes/Master_Payment_Schedule.recordType-meta.xml
<RecordType>
    <fullName>Master_Payment_Schedule</fullName>
    <active>true</active>
    <label>Master Payment Schedule</label>
</RecordType>