force-app/main/default/objects/Payment_Schedule__c/recordTypes/Sub_Payment_Schedule.recordType-meta.xml
<RecordType>
    <fullName>Sub_Payment_Schedule</fullName>
    <active>true</active>
    <label>Sub Payment Schedule</label>
</RecordType>