force-app/main/default/objects/Payment_Schedule__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Payment_Schedule__c</columns>
    <columns>Installment_Amount__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Payment_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>